ZCrypt-Rust/compile_errors.txt
warning: unused variable: `n`
   --> src\ipc\ipc.rs:123:17
    |
123 | ... let n = self.cl...
    |         ^ help: if this is intentional, prefix it with an underscore: `_n`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: crate `ZCrypt` should have a snake case name
  |
  = help: convert the identifier to snake case: `zcrypt`
  = note: `#[warn(non_snake_case)]` (part of `#[warn(nonstandard_style)]`) on by default

warning: unused return value of `std::option::Option::<T>::insert` that must be used
  --> src\ipc\ipc.rs:56:13
   |
56 | ...   self.stream.insert(server.wait()?);
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: if you intended to set a value, consider assignment instead
   = note: `#[warn(unused_must_use)]` (part of `#[warn(unused)]`) on by default
help: use `let _ = ...` to ignore the resulting value
   |
56 |             let _ = self.stream.insert(server.wait()?);
   |             +++++++

warning: unused return value of `std::option::Option::<T>::insert` that must be used
  --> src\ipc\ipc.rs:90:13
   |
90 | ...   self.cli...ipe)?);
   |       ^^^^^^^^...^^^^^^
   |
   = note: if you intended to set a value, consider assignment instead
help: use `let _ = ...` to ignore the resulting value
   |
90 |             let _ = self.client.insert(PipeClient::connect(&self.named_pipe)?);
   |             +++++++

warning: unused return value of `std::option::Option::<T>::insert` that must be used
  --> src\ipc\ipc.rs:99:25
   |
99 | ...   self.client.insert(c);
   |       ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: if you intended to set a value, consider assignment instead
help: use `let _ = ...` to ignore the resulting value
   |
99 |                         let _ = self.client.insert(c);
   |                         +++++++

warning: `ZCrypt` (lib) generated 5 warnings (run `cargo fix --lib -p ZCrypt` to apply 1 suggestion)
warning: unused import: `ZCrypt::cryptic_engine`
 --> src\bin\cryptic_test.rs:1:5
  |
1 | use ZCrypt::cryptic_engine;
  |     ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `ZCrypt::cryptic_engine::cryptic_record::CrypticRecordBuilder`
 --> src\bin\cryptic_test.rs:5:5
  |
5 | use ZCry...ecordBuilder;
  |     ^^^^...^^^^^^^^^^^^

warning: unused variable: `result`
  --> src\bin\cryptic_test.rs:30:9
   |
30 |     let result = fs:...
   |         ^^^^^^ help: if this is intentional, prefix it with an underscore: `_result`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused `Result` that must be used
  --> src\bin\server_test.rs:10:5
   |
10 |     server.write("bleh !".as_bytes());
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this `Result` may be an `Err` variant, which should be handled
   = note: `#[warn(unused_must_use)]` (part of `#[warn(unused)]`) on by default
help: use `let _ = ...` to ignore the resulting value
   |
10 |     let _ = server.write("bleh !".as_bytes());
   |     +++++++

    Checking ZCrypt v0.1.0 (D:\Workspace\Repositories\Z-TAS-Solutions\ZCrypt\ZCrypt-Rust)
warning: unused variable: `listener_service`
 --> src\bin\listener_test.rs:7:10
  |
7 | ...t (listener_service, e...
  |       ^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_listener_service`
  |
  = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `enqueue`
 --> src\bin\listener_test.rs:7:28
  |
7 | ...ice, enqueue) = ip...
  |         ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_enqueue`

warning: `ZCrypt` (bin "cryptic_test") generated 3 warnings (run `cargo fix --bin "cryptic_test" -p ZCrypt` to apply 3 suggestions)
warning: `ZCrypt` (bin "server_test") generated 1 warning
warning: `ZCrypt` (bin "listener_test") generated 2 warnings (run `cargo fix --bin "listener_test" -p ZCrypt` to apply 2 suggestions)
warning: unused import: `self`
 --> src\main.rs:4:30
  |
4 | use ZCrypt::zproto::zproto::{self, PingResponse};
  |                              ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `NamedPipeServer: Connected` is not satisfied
   --> src\main.rs:41:10
    |
 41 |         .serve_with_incoming(incoming)
    |          ^^^^^^^^^^^^^^^^^^^ the trait `Connected` is not implemented for `NamedPipeServer`
    |
help: the following other types implement trait `Connected`
   --> C:\Users\super\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tonic-0.11.0\src\transport\server\conn.rs:89:1
    |
 89 | impl Connected for AddrStream {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `hyper::server::tcp::addr_stream::AddrStream`
...
100 | impl Connected for TcpStream {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `tokio::net::TcpStream`
...
111 | impl Connected for tokio::io::DuplexStream {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `DuplexStream`
note: required by a bound in `Router::<L>::serve_with_incoming`
   --> C:\Users\super\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tonic-0.11.0\src\transport\server\mod.rs:672:38
    |
666 |     pub async fn serve_with_incoming<I, IO, IE, ResBody>(
    |                  ------------------- required by a bound in this associated function
...
672 |         IO: AsyncRead + AsyncWrite + Connected + Unpin + Send + 'static,
    |                                      ^^^^^^^^^ required by this bound in `Router::<L>::serve_with_incoming`

error[E0277]: the trait bound `NamedPipeServer: Connected` is not satisfied
   --> src\main.rs:38:5
    |
 38 | /     Server::builder()
 39 | |         .add_service(ping_svc)
 40 | |         .add_service(cryptic_svc)
 41 | |         .serve_with_incoming(incoming)
    | |______________________________________^ the trait `Connected` is not implemented for `NamedPipeServer`
    |
help: the following other types implement trait `Connected`
   --> C:\Users\super\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tonic-0.11.0\src\transport\server\conn.rs:89:1
    |
 89 | impl Connected for AddrStream {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `hyper::server::tcp::addr_stream::AddrStream`
...
100 | impl Connected for TcpStream {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `tokio::net::TcpStream`
...
111 | impl Connected for tokio::io::DuplexStream {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `DuplexStream`
note: required by a bound in `Router::<L>::serve_with_incoming`
   --> C:\Users\super\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tonic-0.11.0\src\transport\server\mod.rs:672:38
    |
666 |     pub async fn serve_with_incoming<I, IO, IE, ResBody>(
    |                  ------------------- required by a bound in this associated function
...
672 |         IO: AsyncRead + AsyncWrite + Connected + Unpin + Send + 'static,
    |                                      ^^^^^^^^^ required by this bound in `Router::<L>::serve_with_incoming`

error[E0277]: the trait bound `NamedPipeServer: Connected` is not satisfied
   --> src\main.rs:42:10
    |
 42 |         .await?;
    |          ^^^^^ the trait `Connected` is not implemented for `NamedPipeServer`
    |
help: the following other types implement trait `Connected`
   --> C:\Users\super\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tonic-0.11.0\src\transport\server\conn.rs:89:1
    |
 89 | impl Connected for AddrStream {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `hyper::server::tcp::addr_stream::AddrStream`
...
100 | impl Connected for TcpStream {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `tokio::net::TcpStream`
...
111 | impl Connected for tokio::io::DuplexStream {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `DuplexStream`
note: required by a bound in `Router::<L>::serve_with_incoming`
   --> C:\Users\super\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tonic-0.11.0\src\transport\server\mod.rs:672:38
    |
666 |     pub async fn serve_with_incoming<I, IO, IE, ResBody>(
    |                  ------------------- required by a bound in this associated function
...
672 |         IO: AsyncRead + AsyncWrite + Connected + Unpin + Send + 'static,
    |                                      ^^^^^^^^^ required by this bound in `Router::<L>::serve_with_incoming`

For more information about this error, try `rustc --explain E0277`.
warning: `ZCrypt` (bin "ZCrypt") generated 1 warning
error: could not compile `ZCrypt` (bin "ZCrypt") due to 3 previous errors; 1 warning emitted
